--- a/bangkok2.ipynb
+++ b/bangkok2.ipynb
@@ -587,13 +587,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('preparing seasonal medians')\n",
-    "nca= nc.cum.resample(time='A') \n",
-    "nc['annual'] = nca.max() - nca.min()\n",
-    "#Ds= D.cum.resample(time='Q').median()\n",
-    "print('done')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -608,7 +602,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#! panel serve --show --port 5009 bangkok.ipynb"
+    "! panel serve --show --port 5009 bangkok2.ipynb"
    ]
   },
   {
@@ -646,24 +640,7 @@
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# preparation for plot\n",
-    "# just fast solution, but it works\n",
-    "timevals = []\n",
-    "i=0\n",
-    "for a in cube.time.values:\n",
-    "    i=i+1\n",
-    "    timevals.append(i-1)\n",
-    "\n",
-    "# Make a panel widget for controlling the depth plotted\n",
-    "depth_slider = pn.widgets.DiscreteSlider(name='LOS deformation (mm) in step', options=timevals, value=1)\n",
-    "\n",
-    "# aliases\n",
-    "As = cube.As\n",
-    "Ds = cube.Ds\n",
-    "Es = cube.Es\n",
-    "Us = cube.Us"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -707,54 +684,7 @@
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "# Make a function for plotting with PyGMT\n",
-    "@pn.depends(depth=depth_slider)\n",
-    "def view(depth: int, save=False):\n",
-    "    if depth == 0:\n",
-    "        depth = 1\n",
-    "    fig = pygmt.Figure()\n",
-    "    pygmt.config(FONT_HEADING='22p,Helvetica-Bold,black')\n",
-    "    t2=str(As[depth].time.dt.quarter.values)+'.'+str(As[depth].time.dt.year.values)\n",
-    "    t1=str(As[depth-1].time.dt.quarter.values)+'.'+str(As[depth-1].time.dt.year.values)\n",
-    "    maintitle = 'deformation between Q'+t1+' and Q'+t2\n",
-    "    with fig.subplot(nrows=2, ncols=2, figsize=(\"30c\", \"24c\"), margins=[\"0.75c\", \"0.5c\"], \n",
-    "                     title=maintitle, frame = 'a'): #, autolabel=True):\n",
-    "        with fig.set_panel(panel=0):\n",
-    "            pygmt.makecpt(cmap=\"roma\", series=[-40,40])\n",
-    "            fig.grdimage(grid=(As[depth]-As[depth-1]), cmap=True, projection=\"R?\") #13c\") #, frame=True) #, panel=True)\n",
-    "            fig.colorbar(frame='a10+l\"LOS deformation [mm]\"')\n",
-    "            fig.text(position=\"TC\", \n",
-    "                     text='ascending frame',\n",
-    "                     #xshift = '-0.02c', yshift = '-0.01c',\n",
-    "                     font=\"22p,Helvetica-Bold,black\"\n",
-    "                    )\n",
-    "            fig.text(x=-27.75,y=38.74, justify='TR', text='Q'+t1+': '+str(Ascount[depth-1])+' epochs ', font=\"16p\")\n",
-    "            fig.text(x=-27.75,y=38.715, justify='TR', text='Q'+t2+': '+str(Ascount[depth])+' epochs ', font=\"16p\")\n",
-    "        with fig.set_panel(panel=1):\n",
-    "            pygmt.makecpt(cmap=\"roma\", series=[-40,40])\n",
-    "            fig.grdimage(grid=(Ds[depth]-Ds[depth-1]), cmap=True, projection=\"R?\")\n",
-    "            fig.colorbar(frame='a10+l\"LOS deformation [mm]\"')\n",
-    "            fig.text(position=\"TC\", text='descending frame', font=\"22p,Helvetica-Bold,black\")\n",
-    "            fig.text(x=-27.75,y=38.74, justify='TR', text='Q'+t1+': '+str(Dscount[depth-1])+' epochs ', font=\"16p\")\n",
-    "            fig.text(x=-27.75,y=38.715, justify='TR', text='Q'+t2+': '+str(Dscount[depth])+' epochs ', font=\"16p\")\n",
-    "        with fig.set_panel(panel=2):\n",
-    "            pygmt.makecpt(cmap=\"vik\", series=[-40,40])\n",
-    "            fig.grdimage(grid=(Us[depth]-Us[depth-1]), cmap=True, projection=\"R?\")\n",
-    "            fig.colorbar(frame='a10+l\"U-D/N-S deformation [mm]\"')\n",
-    "            fig.text(position=\"TC\", text='up-down(+N-S) component', font=\"22p,Helvetica-Bold,black\")\n",
-    "        with fig.set_panel(panel=3):\n",
-    "            pygmt.makecpt(cmap=\"vik\", series=[-40,40])\n",
-    "            fig.grdimage(grid=(Es[depth]-Es[depth-1]), cmap=True, projection=\"R?\")\n",
-    "            fig.colorbar(frame='a10+l\"E-W deformation [mm]\"')\n",
-    "            fig.text(position=\"TC\", text='east-west component', font=\"22p,Helvetica-Bold,black\")\n",
-    "    if save:\n",
-    "        fname='step_'+str(depth)+'.png'\n",
-    "        fig.savefig(fname, dpi=150)\n",
-    "    else:\n",
-    "        return fig.show(dpi=100)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -827,9 +757,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pn.Column(depth_slider, view)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -854,12 +782,7 @@
      ]
     }
    ],
-   "source": [
-    "# you can save the step to pngs:\n",
-    "for i in range(13):\n",
-    "    print('saving step '+str(i+1))\n",
-    "    view(i+1, save=True)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -881,10 +804,7 @@
      "output_type": "display_data"
     }
    ],
-   "source": [
-    "# or just view one of the steps directly\n",
-    "view(12)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
