--- a/bangkok.ipynb
+++ b/bangkok.ipynb
@@ -517,8 +517,8 @@
     "\n",
     "# get only velocity to show in map\n",
     "vel = gv.Image(nc['U'], ['lon','lat'])\n",
-    "themap = vel.opts(cmap='RdBu_r', colorbar=True, backend='bokeh')\n",
-    "\n",
+    "themap = vel.opts(cmap='RdBu_r', colorbar=True, backend='bokeh', clim=(-50,50))\n",
+    "#width=600, height=500,\n",
     "\n",
     "# make a function that displays info at selected point\n",
     "def showvel(x, y):\n",
@@ -528,7 +528,7 @@
     "    except:\n",
     "        selvel=0\n",
     "        #selcoh=0\n",
-    "    return pn.pane.Str('vertical deformation: %0.2f' %selvel +' mm/year',width=300)\n",
+    "    return pn.pane.Str('vertical deformation: %0.1f' %selvel +' mm/year',width=300)\n",
     "\n",
     "# Time series viewer function\n",
     "\n",
