--- a/bangkok_100m.ipynb
+++ b/bangkok_100m.ipynb
@@ -475,7 +475,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/bangkok/ML5smooth/bangkok_dec_plus_cum_100m.nc' -O temp.nc"
+    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/bangkok/ML1crop/reunwcasc/bangkok_dec_plus_cum_100m.nc' -O temp.nc"
    ]
   },
   {
@@ -490,7 +490,11 @@
     "#nc['cum']=nc.cum_pseudovertical\n",
     "coordsys = \"epsg:4326\"\n",
     "nc = nc.rio.set_spatial_dims(x_dim=\"lon\", y_dim=\"lat\", inplace=True)\n",
-    "nc = nc.rio.write_crs(coordsys, inplace=True)\n"
+    "nc = nc.rio.write_crs(coordsys, inplace=True)\n",
+    "\n",
+    "rlon=100.606654\n",
+    "rlat=13.668435\n",
+    "nc=nc-nc.sel(lon=rlon,lat=rlat,method='nearest')\n"
    ]
   },
   {
@@ -502,7 +506,7 @@
     "\n",
     "# get only velocity to show in map\n",
     "vel = gv.Image(nc['U'], ['lon','lat'])\n",
-    "themap = vel.opts(cmap='RdBu_r', colorbar=True, backend='bokeh', clim=(-40,30), width=600, height=500)\n",
+    "themap = vel.opts(cmap='RdBu_r', colorbar=True, backend='bokeh', clim=(-30,20), width=600, height=500)\n",
     "\n",
     "# make a function that displays info at selected point\n",
     "def showvel(x, y):\n",
@@ -529,7 +533,7 @@
     "## set limits to time series\n",
     "#ylims = (nc.cum.quantile(0.005),nc.cum.quantile(0.995))\n",
     "#ylims = (nc.cum.min(),nc.cum.max())\n",
-    "ylims = (-700,200)\n",
+    "ylims = (-200,200)\n",
     "def plotts(x, y):\n",
     "    try:\n",
     "        selts=nc.sel(lat=y, lon=x, method='nearest').cum\n",
