Update and rename bangkok2.ipynb to terceira.ipynb

--- a/terceira.ipynb
+++ b/terceira.ipynb
@@ -461,7 +461,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/bangkok/ML5smooth/bangkok_dec_plus_cum_ok_small.nc' -O temp.nc"
+    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/002A_05136_020502.nc' -O temp.nc"
+    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/082D_05128_030500.nc' -O temp_D.nc"
    ]
   },
   {
@@ -474,7 +475,7 @@
     "import xarray as xr\n",
     "nc=xr.open_dataset('temp.nc')\n",
     "\n",
-    "nc['cum']=nc.cum_pseudovertical\n",
+    "nc_D=xr.open_dataset('temp_D.nc')\n",
     "coordsys = \"epsg:4326\"\n",
     "nc = nc.rio.set_spatial_dims(x_dim=\"lon\", y_dim=\"lat\", inplace=True)\n",
     "nc = nc.rio.write_crs(coordsys, inplace=True)\n"
