--- a/terceira.ipynb
+++ b/terceira.ipynb
@@ -461,8 +461,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/002A_05136_020502.nc' -O temp.nc"
-    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/082D_05128_030500.nc' -O temp_D.nc"
+    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/002A_05136_020502.nc' -O temp.nc \n",
+    "! wget --no-check-certificate 'https://gws-access.jasmin.ac.uk/public/nceo_geohazards/shared/temp/earmla/terceira/082D_05128_030500.nc' -O temp_D.nc \n"
    ]
   },
   {
